--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Project specific
+dist
+tmp*
+package.tar.gz
+
 # Logs
 logs
 *.log
@@ -16,6 +21,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+coverage.lcov
 
 # nyc test coverage
 .nyc_output
@@ -56,4 +62,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
