--- a/package.json
+++ b/package.json
@@ -32,38 +32,39 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "hive-io": "~2.0.0-beta",
-    "mongoose": "~5.0.9",
+    "fluent-logger": "~2.7.0",
+    "hive-io": "~2.0.0-beta.3",
+    "mongoose": "~5.1.2",
     "uuid": "~3.2.1"
   },
   "devDependencies": {
     "archiver": "~2.1.1",
     "babel-cli": "~6.26.0",
-    "babel-core": "~6.26.0",
-    "babel-eslint": "~8.2.2",
+    "babel-core": "~6.26.3",
+    "babel-eslint": "~8.2.3",
     "babel-plugin-add-module-exports": "~0.2.1",
-    "babel-plugin-istanbul": "~4.1.5",
+    "babel-plugin-istanbul": "~4.1.6",
     "babel-plugin-syntax-object-rest-spread": "~6.13.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "babel-register": "~6.26.0",
     "chai": "~4.1.2",
     "chai-as-promised": "~7.1.1",
-    "codecov": "~3.0.0",
+    "codecov": "~3.0.2",
     "del-cli": "~1.1.0",
     "dirty-chai": "~2.0.1",
-    "mocha": "~5.0.3",
-    "nodemon": "~1.17.1",
-    "nyc": "~11.4.1",
+    "mocha": "~5.2.0",
+    "nodemon": "~1.17.5",
+    "nyc": "~11.8.0",
     "proxyquire": "~2.0.0",
-    "sinon": "~4.4.2",
+    "sinon": "~5.0.10",
     "standard": "~11.0.0",
     "uglify-es": "~3.3.9",
-    "validator": "~9.4.1"
+    "validator": "~10.2.0"
   },
   "nyc": {
     "exclude": [
       "src/schemas/mongoose/*",
-      "src/util/mongoConnect.js"
+      "src/util/*.js"
     ],
     "check-coverage": true,
     "per-file": true,
