--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "fluent-logger": "~2.7.0",
-    "hive-io": "~2.0.0-beta.3",
-    "mongoose": "~5.1.2",
+    "hive-io": "^2.0.0-beta.4",
+    "mongoose": "^5.1.3",
     "uuid": "~3.2.1"
   },
   "devDependencies": {
