--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hive-io-rest-example",
   "version": "2.0.0-beta.4",
-  "description": "An example REST module to help describe implementation details when leveraging hive-io.",
+  "description": "An example REST module to help describe implementation details when leveraging the Hive^io framework.",
   "main": "index.js",
   "scripts": {
     "prebuild": "del dist",
@@ -34,7 +34,7 @@
   "dependencies": {
     "fluent-logger": "~2.7.0",
     "hive-io": "~2.0.0-beta.6",
-    "mongoose": "~5.1.3",
+    "mongoose": "~5.1.4",
     "uuid": "~3.2.1"
   },
   "devDependencies": {
@@ -54,12 +54,12 @@
     "dirty-chai": "~2.0.1",
     "mocha": "~5.2.0",
     "nodemon": "~1.17.5",
-    "nyc": "~12.0.1",
+    "nyc": "~12.0.2",
     "proxyquire": "~2.0.0",
     "sinon": "~5.0.10",
     "standard": "~11.0.0",
     "uglify-es": "~3.3.9",
-    "validator": "~10.2.0"
+    "validator": "~10.3.0"
   },
   "nyc": {
     "exclude": [
