--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hive-io-rest-example",
-  "version": "2.0.0-beta.5",
+  "version": "2.0.0-rc",
   "description": "An example REST module to help describe implementation details when leveraging the Hive^io framework.",
   "main": "index.js",
   "scripts": {
