--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.0
 jobs:
   checkout_code:
     docker:
-      - image: circleci/node:8.11.3
+      - image: circleci/node:10.16.3
     working_directory: ~/hive-io-rest-example
     steps:
       - checkout
@@ -14,7 +14,7 @@ jobs:
 
   install_dependencies:
     docker:
-      - image: circleci/node:8.11.3
+      - image: circleci/node:10.16.3
     working_directory: ~/hive-io-rest-example
     steps:
       - restore_cache:
@@ -31,7 +31,7 @@ jobs:
 
   test:
     docker:
-      - image: circleci/node:8.11.3
+      - image: circleci/node:10.16.3
     working_directory: ~/hive-io-rest-example
     steps:
       - restore_cache:
@@ -53,7 +53,7 @@ jobs:
 
   build:
     docker:
-      - image: circleci/node:8.11.3
+      - image: circleci/node:10.16.3
     working_directory: ~/hive-io-rest-example
     steps:
       - restore_cache:
@@ -64,13 +64,7 @@ jobs:
             - dependencies-{{ .Branch }}-{{ checksum "package.json" }}
       - run:
           name: Build and compress code
-          command: npm run build && node ./bin/compress
-      - save_cache:
-          key: assets-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
-          paths:
-            - ~/hive-io-rest-example/package.tar.gz
-      - store_artifacts:
-          path: ~/hive-io-rest-example/package.tar.gz
+          command: npm run build
 
 workflows:
   version: 2
