--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.0
 jobs:
   checkout_code:
     docker:
-      - image: circleci/node:8.11.3
+      - image: circleci/node:12.13.1
     working_directory: ~/hive-io-rest-example
     steps:
       - checkout
@@ -14,15 +14,12 @@ jobs:
 
   install_dependencies:
     docker:
-      - image: circleci/node:8.11.3
+      - image: circleci/node:12.13.1
     working_directory: ~/hive-io-rest-example
     steps:
       - restore_cache:
           keys:
             - repo-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
-      - restore_cache:
-          keys:
-            - dependencies-{{ .Branch }}-{{ checksum "package.json" }}
       - run: npm install --no-optional
       - save_cache:
           key: dependencies-{{ .Branch }}-{{ checksum "package.json" }}
@@ -31,7 +28,7 @@ jobs:
 
   test:
     docker:
-      - image: circleci/node:8.11.3
+      - image: circleci/node:12.13.1
     working_directory: ~/hive-io-rest-example
     steps:
       - restore_cache:
@@ -53,7 +50,7 @@ jobs:
 
   build:
     docker:
-      - image: circleci/node:8.11.3
+      - image: circleci/node:12.13.1
     working_directory: ~/hive-io-rest-example
     steps:
       - restore_cache:
@@ -63,14 +60,8 @@ jobs:
           keys:
             - dependencies-{{ .Branch }}-{{ checksum "package.json" }}
       - run:
-          name: Build and compress code
-          command: npm run build && node ./bin/compress
-      - save_cache:
-          key: assets-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
-          paths:
-            - ~/hive-io-rest-example/package.tar.gz
-      - store_artifacts:
-          path: ~/hive-io-rest-example/package.tar.gz
+          name: Build code
+          command: npm run build
 
 workflows:
   version: 2
