--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "del dist",
-    "build": "NODE_ENV=production bash ./bin/build",
-    "coverage": "NODE_ENV=test nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "build": "cross-env NODE_ENV=production bash ./bin/build",
+    "coverage": "cross-env NODE_ENV=test nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "dev": "nodemon -e js,json -w src -w conf -x \"npm run build\" & nodemon -e js -w tst -x \"npm test\"",
     "fix": "standard --fix",
-    "prerelease": "del package.tar.gz",
-    "release": "NODE_ENV=production npm test && npm run build && node ./bin/compress",
+    "release": "npm test && npm run build",
     "pretest": "del coverage coverage.lcov .nyc_output",
     "test": "standard",
-    "posttest": "NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 5000 --recursive --exit 'tst/**/*.spec.js'",
+    "posttest": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 5000 --recursive --exit 'tst/**/*.spec.js'",
     "version": "npm run release && git add --all",
     "postversion": "git push && git push --tags && npm publish"
   },
@@ -28,38 +27,38 @@
   "author": "Adam Eilers",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+    "node": ">=10",
+    "npm": ">=6"
   },
   "dependencies": {
-    "fluent-logger": "~2.7.0",
-    "hive-io": "~2.0.0-rc.2",
-    "mongoose": "~5.1.6",
-    "uuid": "~3.2.1"
+    "fluent-logger": "~3.4.0",
+    "hive-io": "~2.0.0-rc.3",
+    "mongoose": "~5.8.0",
+    "uuid": "~3.3.3"
   },
   "devDependencies": {
-    "archiver": "~2.1.1",
-    "babel-cli": "~6.26.0",
-    "babel-core": "~6.26.3",
-    "babel-eslint": "~8.2.3",
-    "babel-plugin-add-module-exports": "~0.2.1",
-    "babel-plugin-istanbul": "~4.1.6",
-    "babel-plugin-syntax-object-rest-spread": "~6.13.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
-    "babel-register": "~6.26.0",
-    "chai": "~4.1.2",
+    "@babel/cli": "~7.7.5",
+    "@babel/core": "~7.7.5",
+    "@babel/plugin-syntax-object-rest-spread": "~7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "~7.7.5",
+    "@babel/register": "~7.7.4",
+    "babel-eslint": "~10.0.3",
+    "babel-plugin-add-module-exports": "~1.0.2",
+    "babel-plugin-istanbul": "~5.2.0",
+    "chai": "~4.2.0",
     "chai-as-promised": "~7.1.1",
-    "codecov": "~3.0.2",
-    "del-cli": "~1.1.0",
+    "codecov": "~3.6.1",
+    "cross-env": "~6.0.3",
+    "del-cli": "~3.0.0",
     "dirty-chai": "~2.0.1",
-    "mocha": "~5.2.0",
-    "nodemon": "~1.17.5",
-    "nyc": "~12.0.2",
-    "proxyquire": "~2.0.0",
-    "sinon": "~6.0.0",
-    "standard": "~11.0.0",
-    "uglify-es": "~3.3.9",
-    "validator": "~10.4.0"
+    "mocha": "~6.2.2",
+    "nodemon": "~2.0.1",
+    "nyc": "~14.1.1",
+    "proxyquire": "~2.1.3",
+    "sinon": "~7.5.0",
+    "standard": "~14.3.1",
+    "terser": "~4.4.2",
+    "validator": "~12.1.0"
   },
   "nyc": {
     "exclude": [
@@ -91,7 +90,7 @@
       ]
     },
     "require": [
-      "babel-register"
+      "@babel/register"
     ],
     "sourceMap": false,
     "instrument": false
