--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "del dist",
     "build": "cross-env NODE_ENV=production bash ./bin/build",
     "coverage": "cross-env NODE_ENV=test nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "dev": "nodemon -e js,json -w src -w conf -x \"npm run build\" & nodemon -e js -w tst -x \"npm test\"",
+    "dev": "nodemon -e js,json -w src -x \"npm run build\" & nodemon -e js -w tst -x \"npm test\"",
     "fix": "standard --fix",
     "release": "npm test && npm run build",
     "pretest": "del coverage coverage.lcov .nyc_output",
@@ -31,34 +31,33 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "fluent-logger": "~3.4.0",
-    "hive-io": "~2.0.0-rc.3",
-    "mongoose": "~5.8.0",
-    "uuid": "~3.3.3"
+    "fluent-logger": "~3.4.1",
+    "hive-io": "~2.0.0-rc.4",
+    "mongoose": "~5.9.6",
+    "uuid": "~7.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "~7.7.5",
-    "@babel/core": "~7.7.5",
-    "@babel/plugin-syntax-object-rest-spread": "~7.7.4",
-    "@babel/plugin-transform-modules-commonjs": "~7.7.5",
-    "@babel/register": "~7.7.4",
-    "babel-eslint": "~10.0.3",
+    "@babel/cli": "~7.8.4",
+    "@babel/core": "~7.9.0",
+    "@babel/plugin-transform-modules-commonjs": "~7.9.0",
+    "@babel/register": "~7.9.0",
+    "babel-eslint": "~10.1.0",
     "babel-plugin-add-module-exports": "~1.0.2",
-    "babel-plugin-istanbul": "~5.2.0",
+    "babel-plugin-istanbul": "~6.0.0",
     "chai": "~4.2.0",
     "chai-as-promised": "~7.1.1",
-    "codecov": "~3.6.1",
-    "cross-env": "~6.0.3",
+    "codecov": "~3.6.5",
+    "cross-env": "~7.0.2",
     "del-cli": "~3.0.0",
     "dirty-chai": "~2.0.1",
-    "mocha": "~6.2.2",
-    "nodemon": "~2.0.1",
-    "nyc": "~14.1.1",
+    "mocha": "~7.1.1",
+    "nodemon": "~2.0.2",
+    "nyc": "~15.0.0",
     "proxyquire": "~2.1.3",
-    "sinon": "~7.5.0",
-    "standard": "~14.3.1",
-    "terser": "~4.4.2",
-    "validator": "~12.1.0"
+    "sinon": "~9.0.1",
+    "standard": "~14.3.3",
+    "terser": "~4.6.7",
+    "validator": "~13.0.0"
   },
   "nyc": {
     "exclude": [
